movieGame.css
body,html{
    height:100%;
    margin:0;
}
#backgroundcolor{
    background-color:black;
    width:100%;
    height:100%;
}
#movieGeekTitle{
    text-align:center;
    color:black;
    font-size:40px;
    border-style:solid;
    border-radius: 20px;
    padding:10px;
    border-color:yellow;
    background-color: yellow;
    display:inline-block;
}
#gameInstructionsTitle{
    text-align: center;
    color:yellow;
    font-size:20px;
    margin-bottom:10px;
}
.gameInstructions{
    color:yellow;
    font-size:15px;
    text-align: center;
}

#movieList{
    margin-top:50px;
    padding:40px;
    text-align: center;
    border-style:solid;
    border-radius:4px;
    border-color:white;
    
}
.movie{
    border-style:solid;
    border-color:yellow;
    color:white;
    background-color:black;
    padding:20px;
    margin:5px;
    border-radius:10px;
    font-size:20px;
}
.movie:hover{
    border-style:solid;
    border-color:yellow;
    color:black;
    background-color:yellow;
    padding:20px;
    margin:5px;
    border-radius:10px;
    font-size:20px;
}
#getReady{
    margin-top:10%;
    font-size:80px;
    text-align: center;
    color:white;
    font-weight: 700;
}

#startCountDown{
    font-size:100px;
    color:limegreen;

}
#submitBtn{
    padding-left:30px;
    padding-right:30px;
    padding-top:10px;
    padding-bottom:10px;
    border-radius: 10px;
    background-color: tomato;
    color:white;
    border-color:tomato;
}

#submitArea{
    margin-bottom:50px;
    margin-top:50px;
    text-align: center;
}


#submitBtn:hover{
    padding-left:30px;
    padding-right:30px;
    padding-top:10px;
    padding-bottom:10px;
    border-radius: 10px;
    background-color: red;
    color:white;
    border-color:red;
}

#step1{
    width:100%;
    height:100%;
    
}
#step2{
    display:none;
}

#questionArea{
    border-style:solid;
    border-color:white;
    color:white;
    border-radius:20px;
    padding:100px;
    height:15%;
    font-size:40px;
    text-align:center;
    font-weight: bold;
}

#questionNumberArea{
    color:black;
    font-size:20px;
    border-style: solid;
    background-color:white;
    border-color:white;
    border-radius:20px;
    padding:20px;
    float:left;
    overflow:hidden;
    width:150px;
}
#scoreArea{
    color:black;
    font-size:20px;
    border-style: solid;
    background-color:white;
    border-color:white;
    border-radius:20px;
    padding:20px;
    float:right;
    width:150px;
}
#firstOptionRow{
    text-align: center;
    padding-top:20px;
}
#secondOptionRow{
    text-align: center;
    padding-top:20px;
}

#optionA{
    display:inline-block;
    border-style:solid;
    border-color:white;
    color:white;
    border-radius:20px;
    width:40%;
    height:50px;
    padding-top:30px;
    margin-right:40px;
}

#optionA:hover {
    display:inline-block;
    border-style:solid;
    border-color:black;
    color:black;
    background-color:white;
    border-radius:20px;
    width:40%;
    height:50px;
    padding-top:30px;
    margin-right: 40px;
}


#optionB{
    display:inline-block;
    border-style:solid;
    border-color:white;
    color:white;
    border-radius:20px;
    width:40%;
    height:50px;
    padding-top:30px;
}

#optionB:hover{
    display:inline-block;
    border-style:solid;
    border-color:black;
    color:black;
    background-color:white;
    border-radius:20px;
    width:40%;
    height:50px;
    padding-top:30px;
}

#optionC{
    display:inline-block;
    border-style:solid;
    border-color:white;
    color:white;
    border-radius:20px;
    width:40%;
    height:50px;
    padding-top:30px;
    margin-right:40px;
}

#optionC:hover{
    display:inline-block;
    border-style:solid;
    border-color:black;
    color:black;
    background-color:white;
    border-radius:20px;
    width:40%;
    height:50px;
    padding-top:30px;
    margin-right:40px;
}

#optionD{
    display:inline-block;
    border-style:solid;
    border-color:white;
    color:white;
    border-radius:20px;
    width:40%;
    height:50px;
    padding-top:30px;
}

#optionD:hover{
    display:inline-block;
    border-style:solid;
    border-color:black;
    color:black;
    background-color:white;
    border-radius:20px;
    width:40%;
    height:50px;
    padding-top:30px;
}

#movieGeekArea{
    text-align: center;
    padding-bottom:20px;
}
#movieGeektitle{
    font-size:40px;
}


#questionTimerArea{
    text-align: center;
    color:limegreen;
    font-size:60px;
    font-weight: 900;
}

#step3{
    display:none;
}

#gameOverTitle{
    text-align: center;
    font-size:100px;
    color:yellow;
    font-weight: bold;
}

#scoreArea{
    text-align:center;
    font-weight: bolder;
}
#totalScore{
    text-align:center;
    font-weight: bolder;
    color:white;
    font-size: 100px;
}

#score{
    padding:20px;
    color:white;
    background-color:teal;
    border-radius:10px;
    font-size:40px;
    
}

#noMovieSelected{
    display:none;
    color:yellow;
    font-size:20px;
    text-align: center;
}

#playAgain{
    margin:40px;
    text-align: center;
    color:white;
    font-size:15px;
    border-style:solid;
    border-color:white;
    padding:20px;
}

#playAgain:hover{
    margin:40px;
    text-align: center;
    color:black;
    font-size:15px;
    border-style:solid;
    border-color:yellow;
    background-color:yellow;
    padding:20px;
}

#viewSummary{
    color:white;
    font-size:15px;
    border-style:solid;
    border-color:white;
    padding:20px;
}

#viewSummary:hover{
    color:black;
    font-size:15px;
    border-style:solid;
    border-color:yellow;
    background-color:yellow;
    padding:20px;
}

#playAgainArea{
    text-align: center;
    margin-top:40px;
}

#totalScoreArea{
    color:white;
    text-align: center;
    font-size: 40px;
}

